namespace CustomLib.Models.Issues
{
    public class IssueCreate : IssueUpdate
    {
        public string UserId { get; set; } = "";
    }
}
